<resources>
    <string name="app_name">HappyActive</string>
    <string name="title_activitypackage_list">ActivityPackages</string>
    <string name="title_activitypackage_detail">ActivityPackage Detail</string>
    <string name="task_done">Done</string>
    <string name="task_title">task</string>
    <string name="task_descpription">description</string>
    <string name="task_description">Description</string>
    <string name="task_done_button">Next Task</string>
    <string name="complete_activity_text">Complete</string>
    <string name="cancel_session_button">Cancel</string>
    <string name="content_description_media">Image</string>
    <string name="dialog_cancel_session">Do you want to cancel activity?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="start_activity_button">"Start"</string>

    <string name="feelings">Express your feelings</string>
    <string name="memento_text">It\'s time to take a picture with your grandparent and write your feelings</string>
    <string name="activityHomeTitle">Activities</string>
    <string name="task_completed_bar">Progress:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation_text">Activity completed</string>
    <string name="congratulation_title">Congratulation</string>

    <string name="appbar_scrolling_view_behavior">true</string>
    <string name="total_activities_completed">Total Activities Completed:</string>
    <string name="total_time_spent_on_activities">Total Time Spent on Activities:</string>
    <string name="total_step_count_during_activities">Total Step Count during Activities:</string>
    <string name="home_image">Home Image</string>
    <string name="average_steps_across_activities">Average Steps Across Activities</string>
    <string name="average_time_across_activiites">Average Time Across Activities</string>
    <string name="time_spent_on_all_activities">Time Spent on all Activities</string>
    <string name="step_count_of_each_activity">Step Count of each Activity</string>
    <string name="congratulations_you_ve_successfully_aced_this_activity">You\'ve successfully aced this activity!!!</string>
    <string name="here_s_your_report_card_for_the_activity">Here\'s your Report Card for the Activity.</string>
    <string name="step_count">Step Count</string>
    <string name="time_spent">Time Spent</string>
    <string name="finish_activity">Finish Activity!</string>
    <string name="population_statistics">Population Statistics</string>
    <string name="you_are">You are</string>
    <string name="average_wear_time_australia">Average Wear Time Australia</string>
    <string name="history_statistics">History Statistics</string>
    <string name="channel_name">Happy Active</string>
    <string name="welcome_text">Hope you\'re excited to start this journey with your grandparents!! Make them more healthy and</string>
    <string name="start_new_activity">Start new activity!</string>
    <string name="welcome">WELCOME!</string>
    <string name="happy_active">HAPPY ACTIVE!!</string>
    <string name="main_report_title">Reports</string>
    <string name="compares_history_data">Compares history data</string>
    <string name="compares_average_data">Compares average data</string>
    <string name="label"></string>
    <string name="do_you_have_a_backyard_garden">Do you have a backyard/garden?</string>
    <string name="your_grandparents_hobbies">Your/Grandparents Hobbies?</string>
    <string name="please_answer_the_following_questions_so_that_we_can_generate_recommendations_that_match_your_preferences">Please answer the following questions so that we can generate recommendations that match your preferences!!</string>
    <string name="walking">Walking</string>
    <string name="gardening">Gardening</string>
    <string name="baking">Baking</string>
    <string name="preferences">Preferences</string>
    <string name="fill_out_pref_dialog">Would you like to fill out preferences so that we can better recommend activities for you?</string>
    <string name="pref_dialog_title">Add Preferences</string>
    <string name="pref_dialog_negative">No. I\'ll set them later!</string>
    <string name="pref_dialog_set_later">You can always set your preferences in the Activities tab</string>
    <string name="empty_memory_reel">Your memory reel is empty.\nPlease complete an activity first.</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">In Progress</string>
    <string name="tab_text_2">Recommended</string>
    <string name="tab_text_3">All Activities</string>
    <string name="memoryReeltabTitle">Memory reel</string>
    <string name="level_image">Level Image</string>
    <string name="submit">Submit</string>
    <string name="more_than_2_km">More than 2 KM</string>
    <string name="_1_2_km">1-2 KM</string>
    <string name="less_than_1_km">Less than 1 km</string>
    <string name="what_distance_do_you_expect_to_travel">What distance do you expect to travel?</string>
    <string name="doesn_t_matter">Doesn\'t Matter</string>
    <string name="more_than_2_hours">More than 2 hours</string>
    <string name="less_than_1_hour">Less than 1 hours</string>
    <string name="_1_2_hours">1-2 Hours</string>
    <string name="how_long_would_you_like_the_activity_to_last">How long would you like the activity to last?</string>
    <string name="what_is_the_extent_of_your_grandparents_arthritis">What is the extent of your grandparents\' arthritis?</string>
    <string name="playing_games">Playing Games</string>
    <string name="shopping">Shopping</string>
    <string name="is_there_a_park_near_your_grandparents_place">Is there a park near your grandparents place?</string>
    <string name="mild_arthritis">Mild arthritis</string>
    <string name="moderate_arthritis">Moderate arthritis</string>
    <string name="severe_arthritis">Severe arthritis</string>
    <string name="_70">70+</string>
    <string name="_60_70">60-70</string>
    <string name="others">Others</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="what_is_your_grandparents_approximate_age">What is your grandparents approximate age?</string>
    <string name="what_is_your_grandparents_gender">What is your grandparents gender?</string>
    <string name="score">Total Score</string>
    <string name="previous_task">Previous Task</string>
    <string name="feelingsTitle">Our feelings</string>
    <string name="filter">Date Filter</string>
    <string name="signature_has_been_changed">The application was modified.\nPlease uninstall the application.</string>
    <string name="uninstall">Uninstall</string>
    <string name="empty_activity_list">Sorry, It\'s empty.\nYou can try to complete an activity first.</string>


</resources>
