<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preferencesLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Preferences.PreferencesFragment" >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbarActivities">

        <TextView
            android:id="@+id/prefLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/preferences"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/preferencesScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingTop="20dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp">

            <TextView
                android:id="@+id/prefFormDescriptionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/please_answer_the_following_questions_so_that_we_can_generate_recommendations_that_match_your_preferences" />

            <TextView
                android:id="@+id/hobbyLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_grandparents_hobbies" />

            <CheckBox
                android:id="@+id/bakingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/baking" />

            <CheckBox
                android:id="@+id/gardeningCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gardening" />

            <CheckBox
                android:id="@+id/playingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/playing_games" />

            <CheckBox
                android:id="@+id/shoppingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shopping" />

            <CheckBox
                android:id="@+id/walkingCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/walking" />

            <TextView
                android:id="@+id/backyardLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_a_backyard_garden" />

            <RadioGroup
                android:id="@+id/backyardRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/yesBackyardRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noBackyardRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/userGenderLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_your_grandparents_gender" />

            <RadioGroup
                android:id="@+id/userGenderRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/maleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/femaleRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/otherGenderRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/others" />
            </RadioGroup>

            <TextView
                android:id="@+id/userAgeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_your_grandparents_approximate_age" />

            <RadioGroup
                android:id="@+id/userAgeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/sixtySeventyRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_60_70" />

                <RadioButton
                    android:id="@+id/seventyPlusRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_70" />
            </RadioGroup>

            <TextView
                android:id="@+id/parkLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/is_there_a_park_near_your_grandparents_place" />

            <RadioGroup
                android:id="@+id/parkRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/yesParkRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/noParkRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:id="@+id/arthritisCondtionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_is_the_extent_of_your_grandparents_arthritis" />

            <RadioGroup
                android:id="@+id/arthritisCondtionRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/mildRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mild_arthritis" />

                <RadioButton
                    android:id="@+id/moderateRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/moderate_arthritis" />

                <RadioButton
                    android:id="@+id/severeRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/severe_arthritis" />
            </RadioGroup>

            <TextView
                android:id="@+id/activityTimeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_long_would_you_like_the_activity_to_last" />

            <RadioGroup
                android:id="@+id/activityTimeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/lessThanOneRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/less_than_1_hour" />

                <RadioButton
                    android:id="@+id/oneToTwoRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_2_hours" />

                <RadioButton
                    android:id="@+id/moreThanTwoRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_than_2_hours" />

                <RadioButton
                    android:id="@+id/doesntMatterRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doesn_t_matter" />
            </RadioGroup>

            <TextView
                android:id="@+id/distanceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/what_distance_do_you_expect_to_travel" />

            <RadioGroup
                android:id="@+id/activityDistanceRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp">

                <RadioButton
                    android:id="@+id/lessThanOneKMRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/less_than_1_km" />

                <RadioButton
                    android:id="@+id/oneToTwoKMRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_2_km" />

                <RadioButton
                    android:id="@+id/moreThanTwoKMRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more_than_2_km" />

                <RadioButton
                    android:id="@+id/doesntMatterKMRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/doesn_t_matter" />
            </RadioGroup>

            <Button
                android:id="@+id/submitPrefFormButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
